--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am gim and this is my first webapp.
-                Hurry!!!!
+       hello         Hurry!!!!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
