[imad-console] Updates ui/myfirst1.html

--- a/ui/myfirst1.html
+++ b/ui/myfirst1.html
@@ -41,9 +41,15 @@
             helooooooo
 
         <p>
-           res.sendFile(path.join(__dirname, 'ui', 'index.html'));
-  res.sendFile(path.join(__dirname, 'ui', 'index.html'));
-  res.sendFile(path.join(__dirname, 'ui', 'index.html'));
+           helooooooo
+            helooooooo
+            helooooooo
+            helooooooo
+            helooooooo
+            helooooooo
+            helooooooo
+            helooooooo
+
         </p>
         </div>
         </body>
