[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I am gim and this is my first webapp.
        hello         Hurry!!!!
         </div>
+        <script>
+        alert(hi ,hello);
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
