[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
        hello         Hurry!!!!
         </div>
         <script>
-        alert(hi ,hello);
+        alert('hi ,hello');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
